# jtorreggiani_test-python-mcp-server

./: pyproject.toml
src/test_server/: server.py  test_client.py
